# arithmetic

./: CMakeLists.txt  arithmetic-config.cmake.in
arithmetic/: CMakeLists.txt  arithmetic.hpp  config.hpp.in
arithmetic/details/: Abelian_additive_group.hpp  Abelian_approximate_additive_group.hpp  Abelian_multiplicative_group.hpp  Addition.hpp  Addition_monoid.hpp  Additive_group.hpp  Additive_identity.hpp  Additive_inverse.hpp  Additive_magma.hpp  Additive_monoid.hpp  Additive_semigroup.hpp  Algebra.hpp  Approximate_additive_group.hpp  Approximate_additive_monoid.hpp  Approximate_additive_semigroup.hpp  Approximate_algebra.hpp  Approximate_field.hpp  Approximate_vector_space.hpp  Closed_unary.hpp  Field.hpp  Field_extension.hpp  Identity.hpp  Inversion.hpp  Magma.hpp  Multiplication.hpp  Multiplicative_group.hpp  Multiplicative_identity.hpp  Multiplicative_inverse.hpp  Multiplicative_magma.hpp  Multiplicative_monoid.hpp  Multiplicative_semigroup.hpp  Negate.hpp  Nullary.hpp  One.hpp  Reciprocal.hpp  Vector_space.hpp  Zero.hpp  import.hpp
arithmetic_testing/: CMakeLists.txt  additive_monoid_test.cpp  additive_test.cpp  approximate_field_test.cpp  field_test.cpp  magma_test.cpp  multiplicative_test.cpp  vector_space_test.cpp
cmake/: arithmetic_deps.cmake
